<resources>
    <string name="app_name">AhorcadoGame</string>
    <string name="play">Jugar</string>
    <string name="indications">Instrucciones</string>
    <string name="settings">Configuraciones</string>
    <string name="exit">Salir</string>

    <string name="category">Categoria: %1$s</string>
    <string name="lose">Has perdido\n¿Deseas jugar de nuevo?</string>
    <string name="win">Has ganado\n¿Deseas jugar de nuevo?</string>
    <string name="leave">¿Estás seguro de abandonar el juego?</string>
    <string name="lives1">Tienes 1 vida</string>
    <string name="lives">Tienes %1$d vidas</string>
    <string name="exit_menu">Menu</string>
    <string name="save_game">Guardar Partida</string>
    <string name="answer">La respuesta correcta era: %1$s</string>
    <string name="no_conection_network">No cuentas con conexión a intenet\nConectate a una red</string>
    <string name="no_conection_service">No se pudo conectar con el servidor</string>
    <string name="new_game">Nuevo juego</string>
    <string name="continue_game">Continuar juego</string>
    <string name="check_continue_game">Tienes una partida guardada\n¿Deseas continuar con la partida o iniciar una nueva?</string>
    <string name="sound">Sonido</string>
    <string name="vibrate">Vibrasión</string>
    <string name="save">Guardar</string>

    <!--    KeyBoard chars-->
    <string name="k_a">a</string>
    <string name="k_b">b</string>
    <string name="k_c">c</string>
    <string name="k_d">d</string>
    <string name="k_e">e</string>
    <string name="k_f">f</string>
    <string name="k_g">g</string>
    <string name="k_h">h</string>
    <string name="k_i">i</string>
    <string name="k_j">j</string>
    <string name="k_k">k</string>
    <string name="k_l">l</string>
    <string name="k_m">m</string>
    <string name="k_n">n</string>
    <string name="k_o">o</string>
    <string name="k_p">p</string>
    <string name="k_q">q</string>
    <string name="k_r">r</string>
    <string name="k_s">s</string>
    <string name="k_t">t</string>
    <string name="k_u">u</string>
    <string name="k_v">v</string>
    <string name="k_w">w</string>
    <string name="k_x">x</string>
    <string name="k_y">y</string>
    <string name="k_z">z</string>



</resources>