<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity"
    android:animateLayoutChanges="true"
    android:background="@drawable/banner_escudo"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvLives"
            android:textSize="40dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/harry_potter_uno"
            android:textColor="@color/ah_yellowD"
            android:shadowRadius="3"
            android:shadowColor="@color/ah_redD"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/ic_logo"
            android:id="@+id/ivState"
            />

        <TextView
            android:id="@+id/tvCategory"
            android:textSize="35dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/harry_potter_uno"
            android:textColor="@color/white"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLetters"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/ah_redL">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:text="@string/k_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button1"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_f"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button6"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_g"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button7"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_h"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button8"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_i"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button9"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:text="@string/k_j"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button10"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_k"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button11"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_l"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button12"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_m"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button13"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_n"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button14"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_o"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button15"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_p"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button16"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_q"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button17"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_r"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button18"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:text="@string/k_s"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button19"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_t"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button20"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_u"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button21"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_v"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button22"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_w"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button23"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_x"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button24"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_y"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button25"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />

                <Button
                    android:text="@string/k_z"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button26"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbConexion"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>