<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/banner_map"
    >

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:alpha="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_logo"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


        <LinearLayout
            android:id="@+id/linearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/tvPlay"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="25sp"
                android:text="@string/play"
                android:textColor="@color/ah_redD"
                android:gravity="center"
                android:background="@drawable/corner_radius_button"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/harry_potter_uno"
                android:elevation="5dp"
                android:shadowColor="@color/ah_redL"
                android:shadowRadius="1"
                />
            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="25sp"
                android:text="@string/settings"
                android:gravity="center"
                android:background="@drawable/corner_radius_button"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/harry_potter_uno"
                android:elevation="5dp"
                android:shadowColor="@color/ah_redL"
                android:shadowRadius="1"
                />
            <TextView
                android:id="@+id/goOut"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="25sp"
                android:text="@string/exit"
                android:gravity="center"
                android:background="@drawable/corner_radius_button"
                android:fontFamily="@font/harry_potter_uno"
                android:elevation="5dp"
                android:shadowColor="@color/ah_redL"
                android:shadowRadius="1"
                />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>